log
Thu Mar 26 11:09:46 PM UTC 2026: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/60
fbba849
Thu Mar 26 11:36:17 PM UTC 2026: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:49:9: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   49 |     list->next = auxNode;
      |         ^~
list.c: In function ‘nextList’:
list.c:54:27: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   54 |     Node* siguiente = list->next;
      |                           ^~
list.c:57:12: error: ‘dato’ undeclared (first use in this function); did you mean ‘¨dato’?
   57 |     return dato;
      |            ^~~~
      |            ¨dato
list.c:57:12: note: each undeclared identifier is reported only once for each function it appears in
list.c:55:10: error: unused variable ‘¨dato’ [-Werror=unused-variable]
   55 |     void*¨dato = siguiente->data;
      |          ^~~~~
list.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1: all warnings being treated as errors
9955c94
Thu Mar 26 11:36:40 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:49:9: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   49 |     list->next = auxNode;
      |         ^~
list.c: In function ‘nextList’:
list.c:57:12: error: ‘dato’ undeclared (first use in this function); did you mean ‘¨dato’?
   57 |     return dato;
      |            ^~~~
      |            ¨dato
list.c:57:12: note: each undeclared identifier is reported only once for each function it appears in
list.c:55:10: error: unused variable ‘¨dato’ [-Werror=unused-variable]
   55 |     void*¨dato = siguiente->data;
      |          ^~~~~
list.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1: all warnings being treated as errors
d8c8569
Thu Mar 26 11:37:00 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:57:12: error: ‘dato’ undeclared (first use in this function); did you mean ‘¨dato’?
   57 |     return dato;
      |            ^~~~
      |            ¨dato
list.c:57:12: note: each undeclared identifier is reported only once for each function it appears in
list.c:55:10: error: unused variable ‘¨dato’ [-Werror=unused-variable]
   55 |     void*¨dato = siguiente->data;
      |          ^~~~~
list.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1: all warnings being treated as errors
7442d1d
Thu Mar 26 11:39:07 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:57:12: error: ‘dato’ undeclared (first use in this function); did you mean ‘¨dato’?
   57 |     return dato;
      |            ^~~~
      |            ¨dato
list.c:57:12: note: each undeclared identifier is reported only once for each function it appears in
list.c:55:10: error: unused variable ‘¨dato’ [-Werror=unused-variable]
   55 |     void*¨dato = siguiente->data;
      |          ^~~~~
list.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1: all warnings being treated as errors
d30b820
Thu Mar 26 11:39:24 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
db54f85
Thu Mar 26 11:39:57 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d0c25f4
Thu Mar 26 11:40:34 PM UTC 2026: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:58:10: error: ‘auxNode’ undeclared (first use in this function); did you mean ‘Node’?
   58 |     free(auxNode);
      |          ^~~~~~~
      |          Node
list.c:58:10: note: each undeclared identifier is reported only once for each function it appears in
488b3f0
Thu Mar 26 11:40:56 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6030c1d
Thu Mar 26 11:42:51 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
8c3e18b
Thu Mar 26 11:44:07 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4bfab20
Thu Mar 26 11:46:08 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
d3e4773
Thu Mar 26 11:47:10 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/60
a9a9e89
Thu Mar 26 11:47:35 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b22582f
Thu Mar 26 11:51:30 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
c9842a2
Thu Mar 26 11:54:10 PM UTC 2026: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 20/60
002f245
Thu Mar 26 11:56:17 PM UTC 2026: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
af9abd4
Thu Mar 26 11:57:19 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
878ebc1
Fri Mar 27 12:00:55 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 30/60
f1c1cd9
Fri Mar 27 12:07:42 AM UTC 2026: 
 list.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  9|3
total_score: 30/60
55069ee
Fri Mar 27 12:11:39 AM UTC 2026: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:109:9: error: ‘List’ {aka ‘struct List’} has no member named ‘newNode’
  109 |     list->newNode->next = list->head;
      |         ^~
list.c:110:22: error: ‘List’ {aka ‘struct List’} has no member named ‘newNode’
  110 |     list->head = list->newNode;
      |                      ^~
172c968
Fri Mar 27 12:13:52 AM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
a6d469f
Fri Mar 27 12:17:37 AM UTC 2026: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
cd7d6f6
Fri Mar 27 12:20:18 AM UTC 2026: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:110:22: error: ‘List’ {aka ‘struct List’} has no member named ‘newNode’
  110 |     list->head = list->newNode;
      |                      ^~
bf12d57
Fri Mar 27 12:20:35 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 30/60
1f43bc6
Fri Mar 27 12:21:39 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6413044
Fri Mar 27 12:26:07 AM UTC 2026: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 40/60
44cec7a
Fri Mar 27 12:29:01 AM UTC 2026: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  10|2
total_score: 40/60
33adcdb
Fri Mar 27 12:37:56 AM UTC 2026: 
 list.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:141:16: error: dereferencing ‘void *’ pointer [-Werror]
  141 |         newNode->prev = list->current;
      |                ^~
list.c:141:16: error: request for member ‘prev’ in something not a structure or union
list.c:146:12: error: dereferencing ‘void *’ pointer [-Werror]
  146 |     newNode->prev = list->current;
      |            ^~
list.c:146:12: error: request for member ‘prev’ in something not a structure or union
list.c:147:12: error: dereferencing ‘void *’ pointer [-Werror]
  147 |     newNode->next = list->current->next;
      |            ^~
list.c:147:12: error: request for member ‘next’ in something not a structure or union
cc1: all warnings being treated as errors
358f3d6
Fri Mar 27 12:38:35 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 40/60
11da937
Fri Mar 27 12:40:46 AM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 50/60
205070a
Fri Mar 27 12:46:57 AM UTC 2026: 
 list.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  11|1
total_score: 50/60
5a50288
Fri Mar 27 01:25:32 AM UTC 2026: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
8adfc2c
Fri Mar 27 01:26:19 AM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
9777021
Fri Mar 27 01:28:50 AM UTC 2026: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
ba23812
Fri Mar 27 01:29:17 AM UTC 2026: 
 tests:  0|0
c4d3c95
Fri Mar 27 01:31:08 AM UTC 2026: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:191:9: error: unknown type name ‘retunr’
  191 |         retunr dato;
      |         ^~~~~~
list.c:191:16: error: unused variable ‘dato’ [-Werror=unused-variable]
  191 |         retunr dato;
      |                ^~~~
cc1: all warnings being treated as errors
157178a
